--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -30,6 +30,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Text summarization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -37,17 +45,48 @@
    "source": [
     "from PyKagi import UniversalSummarizer\n",
     "\n",
-    "API_KEY = \"your api key\"\n",
+    "# API_KEY = \"your api key\"\n",
     "US = UniversalSummarizer(API_KEY)\n",
     "\n",
-    "method = \"POST\"\n",
+    "text = f\"\"\"Thank you. I'm honored to be with you today for your commencement from one of the finest universities in the world. Truth be told, I never graduated from college, and this is the closest I've ever gotten to a college graduation. Today I want to tell you three stories from my life. That's it. No big deal. Just three stories. (...)\"\"\"\n",
+    "engine = \"agnes\"\n",
+    "target_language = \"KO\"\n",
+    "cache = True\n",
+    "\n",
+    "result = US.summarize(\n",
+    "    text = text,\n",
+    "    engine = engine,\n",
+    "    target_language = target_language,\n",
+    "    cache = cache\n",
+    ")\n",
+    "result"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Web content summarization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PyKagi import UniversalSummarizer\n",
+    "\n",
+    "# API_KEY = \"your api key\"\n",
+    "US = UniversalSummarizer(API_KEY)\n",
+    "\n",
     "url = \"https://namu.wiki/w/Midjourney\"\n",
     "engine = \"agnes\"\n",
     "target_language = \"KO\"\n",
     "cache = True\n",
     "\n",
     "result = US.summarize(\n",
-    "    method = method,\n",
     "    url = url,\n",
     "    engine = engine,\n",
     "    target_language = target_language,\n",
@@ -72,7 +111,7 @@
    "source": [
     "from PyKagi import Search\n",
     "\n",
-    "API_KEY = \"your api key\"\n",
+    "# API_KEY = \"your api key\"\n",
     "S = Search(API_KEY)\n",
     "\n",
     "query = \"Steve Jobs\"\n",
