update: FastGPT API

--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -100,6 +100,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## FastGPT API"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PyKagi import FastGPT\n",
+    "\n",
+    "# API_KEY = \"your api key\"\n",
+    "FGPT = FastGPT(API_KEY)\n",
+    "\n",
+    "query = \"python 3.11\"\n",
+    "web_search = False\n",
+    "cache = True\n",
+    "\n",
+    "result = FGPT.fastgpt(\n",
+    "    query = query,\n",
+    ")\n",
+    "result"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Search API"
    ]
   },
@@ -140,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
